@@ -99,9 +99,6 @@ namespace dolfin {
     void update(FunctionSpace::ElementFunction& v,
 		const FiniteElement& element, const Cell& cell, real t) const;
     
-    // Update local function (restriction to given cell)
-    void update(NewArray<real>& w, const Cell& cell, const NewPDE& pde) const;
-
     // Vector function
     class Vector {
     public:
