@@ -11,7 +11,6 @@ namespace dolfin {
 
   class Cell;
   class FiniteElement;
-  class NewFiniteElement;
 
   class ScalarExpressionFunction : public ExpressionFunction {
   public:
@@ -31,9 +30,6 @@ namespace dolfin {
     void update(FunctionSpace::ElementFunction& v,
 		const FiniteElement& element,
 		const Cell& cell, real t) const;
-
-    // FIXME: works only for nodal basis
-    void update(NewArray<real>& w, const Cell& cell, const NewFiniteElement& element) const;
 
   private:
     
