@@ -1,37 +1,165 @@
-// Copyright (C) 2003 Johan Hoffman and Anders Logg.
+// This file was automatically generated by FFC, the FEniCS Form Compiler.
 // Licensed under the GNU GPL Version 2.
 
-#ifndef __OLDPOISSON_H
-#define __OLDPOISSON_H
+#ifndef __POISSON_H
+#define __POISSON_H
 
-#include <dolfin/PDE.h>
+#include <dolfin/NewFiniteElement.h>
+#include <dolfin/LinearForm.h>
+#include <dolfin/BilinearForm.h>
 
-namespace dolfin {
-  
-  class OldPoisson : public PDE {
-  public:
-    
-    OldPoisson(Function& source) : PDE(3)
-    {
-      add(f, source);
-    }
-    
-    real lhs(const ShapeFunction& u, const ShapeFunction& v)
-    {
-      return (grad(u),grad(v))*dx;
-    }
-    
-    real rhs(const ShapeFunction& v)
-    {
-      return f*v*dx;
-    }
-    
-  private:
-    
-    ElementFunction f;
-    
-  };
-  
-}
+namespace dolfin { namespace Poisson {
+
+/// This is the finite element for which the form is generated,
+/// providing the information neccessary to do assembly.
+
+class FiniteElement : public dolfin::NewFiniteElement
+{
+public:
+
+  FiniteElement() : dolfin::NewFiniteElement(), tensordims(0)
+  {
+    // Do nothing
+  }
+
+  ~FiniteElement()
+  {
+    if ( tensordims ) delete [] tensordims;
+  }
+
+  inline unsigned int spacedim() const
+  {
+    return 6;
+  }
+
+  inline unsigned int shapedim() const
+  {
+    return 2;
+  }
+
+  inline unsigned int tensordim(unsigned int i) const
+  {
+    dolfin_error("Element is scalar.");
+    return 0;
+  }
+
+  inline unsigned int rank() const
+  {
+    return 0;
+  }
+
+  // FIXME: Only works for nodal basis
+  inline unsigned int dof(unsigned int i, const Cell& cell, const Mesh& mesh) const
+  {
+    return cell.nodeID(i);
+  }
+
+  // FIXME: Only works for nodal basis
+  inline const Point coord(unsigned int i, const Cell& cell, const Mesh& mesh) const
+  {
+    Point p;
+    return p;
+  }
+
+private:
+
+  unsigned int* tensordims;
+
+};
+
+/// This class contains the form to be evaluated, including
+/// contributions from the interior and boundary of the domain.
+
+class BilinearForm : public dolfin::BilinearForm
+{
+public:
+
+  BilinearForm(const NewFiniteElement& element) : dolfin::BilinearForm(element) {}
+
+  bool interior(real* block) const
+  {
+    // Compute geometry tensors
+    real G0_00 = det*(g00*g00 + g01*g01);
+    real G0_01 = det*(g00*g10 + g01*g11);
+    real G0_10 = det*(g10*g00 + g11*g01);
+    real G0_11 = det*(g10*g10 + g11*g11);
+
+    // Compute element tensor
+    block[0] = 3.0*G0_00 + 3.0*G0_01 + 3.0*G0_10 + 3.0*G0_11;
+    block[1] = 1.0*G0_00 + 1.0*G0_10;
+    block[2] = 1.0*G0_01 + 1.0*G0_11;
+    block[3] = 0.0;
+    block[4] = -4.0*G0_01 - 4.0*G0_11;
+    block[5] = -4.0*G0_00 - 4.0*G0_10;
+    block[6] = 1.0*G0_00 + 1.0*G0_01;
+    block[7] = 3.0*G0_00;
+    block[8] = -1.0*G0_01;
+    block[9] = 4.0*G0_01;
+    block[10] = 0.0;
+    block[11] = -4.0*G0_00 - 4.0*G0_01;
+    block[12] = 1.0*G0_10 + 1.0*G0_11;
+    block[13] = -1.0*G0_10;
+    block[14] = 3.0*G0_11;
+    block[15] = 4.0*G0_10;
+    block[16] = -4.0*G0_10 - 4.0*G0_11;
+    block[17] = 0.0;
+    block[18] = 0.0;
+    block[19] = 4.0*G0_10;
+    block[20] = 4.0*G0_01;
+    block[21] = 8.0*G0_00 + 4.0*G0_01 + 4.0*G0_10 + 8.0*G0_11;
+    block[22] = -8.0*G0_00 - 4.0*G0_01 - 4.0*G0_10;
+    block[23] = -4.0*G0_01 - 4.0*G0_10 - 8.0*G0_11;
+    block[24] = -4.0*G0_10 - 4.0*G0_11;
+    block[25] = 0.0;
+    block[26] = -4.0*G0_01 - 4.0*G0_11;
+    block[27] = -8.0*G0_00 - 4.0*G0_01 - 4.0*G0_10;
+    block[28] = 8.0*G0_00 + 4.0*G0_01 + 4.0*G0_10 + 8.0*G0_11;
+    block[29] = 4.0*G0_01 + 4.0*G0_10;
+    block[30] = -4.0*G0_00 - 4.0*G0_01;
+    block[31] = -4.0*G0_00 - 4.0*G0_10;
+    block[32] = 0.0;
+    block[33] = -4.0*G0_01 - 4.0*G0_10 - 8.0*G0_11;
+    block[34] = 4.0*G0_01 + 4.0*G0_10;
+    block[35] = 8.0*G0_00 + 4.0*G0_01 + 4.0*G0_10 + 8.0*G0_11;
+
+    return true;
+  }
+
+};
+
+/// This class contains the form to be evaluated, including
+/// contributions from the interior and boundary of the domain.
+
+class LinearForm : public dolfin::LinearForm
+{
+public:
+
+  LinearForm(const NewFiniteElement& element) : dolfin::LinearForm(element) {}
+
+  bool interior(real* block) const
+  {
+    // Compute geometry tensors
+    real G0_0 = det*c[0][0];
+    real G0_1 = det*c[0][1];
+    real G0_2 = det*c[0][2];
+    real G0_3 = det*c[0][3];
+    real G0_4 = det*c[0][4];
+    real G0_5 = det*c[0][5];
+
+    // Compute element tensor
+    block[0] = 0.0166666666667*G0_0 - 0.00277777777778*G0_1 - 0.00277777777778*G0_2 - 0.0111111111111*G0_3;
+    block[1] = -0.00277777777778*G0_0 + 0.0166666666667*G0_1 - 0.00277777777778*G0_2 - 0.0111111111111*G0_4;
+    block[2] = -0.00277777777778*G0_0 - 0.00277777777778*G0_1 + 0.0166666666667*G0_2 - 0.0111111111111*G0_5;
+    block[3] = -0.0111111111111*G0_0 + 0.0888888888889*G0_3 + 0.0444444444444*G0_4 + 0.0444444444444*G0_5;
+    block[4] = -0.0111111111111*G0_1 + 0.0444444444444*G0_3 + 0.0888888888889*G0_4 + 0.0444444444444*G0_5;
+    block[5] = -0.0111111111111*G0_2 + 0.0444444444444*G0_3 + 0.0444444444444*G0_4 + 0.0888888888889*G0_5;
+
+    return true;
+  }
+
+};
+
+
+} }
 
 #endif
